ændringer i den forkerte (produktsiden)

--- a/style.css
+++ b/style.css
@@ -212,3 +212,11 @@ a {
   border: 3px solid #e30613;
   color: #000000;
 }
+
+.p_farven_blå {
+  padding-top: 3rem;
+}
+
+.produkt_billede_produktside {
+  border: 2px solid #ddd;
+}
